<resources>
    <string name="app_name">My Project</string>
    <string name="edit_button_text">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name_placeholder">%s</string>
    <string name="career">Career</string>
    <string name="home_address">Home Address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_contacts">VIEW MY CONTACTS</string>
    <string name="profile_image_desc">profile_image</string>
    <string name="facebook_logo_desc">facebook_logo</string>
    <string name="linkedin_logo_desc">linkedin_logo</string>
    <string name="instagram_logo_desc">instagram_logo</string>
    <string name="first_tab_text">My profile</string>
    <string name="second_tab_text">Contacts</string>

    <string name="acquainted_text">Let\'s get acquainted</string>
    <string name="fill_the_profile_text">Fill out the profile and go to the application!</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="career_hint">Career</string>
    <string name="address_hint">Address</string>
    <string name="remember_me">Remember me</string>
    <string name="google_text">GOOGLE</string>
    <string name="or_text">or</string>
    <string name="register_text">REGISTER</string>
    <string name="register_terms_text">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="already_have_text">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="google_logo_desc">google_logo</string>
    <string name="back_button_desc">back</string>
    <string name="contacts_label">Contacts</string>
    <string name="add_contacts_label">Add contacts</string>

    <string name="error_email_required">E-mail is required.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_password_min_length">Your password must include a minimum of 8 characters.</string>
    <string name="error_password_max_length">Your password must include a maximum of 16 characters.</string>
    <string name="error_password_symbols">Your password must include only letters, numbers, and symbols.</string>
    <string name="error_invalid_email">Invalid E-mail address.</string>
    <string name="error_email_exists">Email is already taken.</string>

    <string name="contact_photo_desc">contact photo</string>
    <string name="delete_icon_desc">delete icon</string>
    <string name="contact_removed">Contact has been removed</string>
    <string name="contact_added">Contact has been added</string>
    <string name="contact_returned">Contact has been returned</string>
    <string name="undo_button">Undo</string>
    <string name="add_contact_save">Save</string>
    <string name="add_contact_message">Add contact</string>
    <string name="add_contact_validation">Name shouldn\'t be empty!</string>

    <string name="message_button_text">Message</string>
    <string name="profile_textview_text">Profile</string>

    <string name="tab_layout_description">tab layout</string>
    <string name="multiselect_delete_description">multiselect delete icon</string>
    <string name="contact_selected_description">selected icon</string>
    <string name="contact_unselected_description">unselected icon</string>

    <string name="hello_text">Hello!</string>
    <string name="enter_your_email_text">Enter your email and password below</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="no_account_text">Don’t have account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="login_text">Login</string>

    <string name="selected_photo_desc">selected_photo</string>

    <string name="your_profile_data_text">Your profile data</string>
    <string name="user_name_hint">User name</string>
    <string name="mobile_phone_hint">Mobile phone</string>
    <string name="forward_button_text">Forward</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="error_name_required">Name is required.</string>
    <string name="error_name_min_length">User name must contain at least 3 letters.</string>
    <string name="error_name_max_length">User name must contain at most 32 letters.</string>
    <string name="error_name_symbols">User name cannot contain that symbols.</string>
    <string name="error_phone_required">Phone is required.</string>
    <string name="error_phone_min_length">Phone must be at least 10 digits long.</string>
    <string name="error_phone_max_length">Phone must be at most 15 digits long.</string>

    <string name="invalid_login_data">Wrong email or password.</string>
    <string name="login_error_password_min_length">Password must include a minimum of 8 characters.</string>
    <string name="login_error_password_max_length">Password must include a maximum of 16 characters.</string>
    <string name="login_error_password_symbols">Password must include only letters, numbers, and symbols.</string>

    <string name="users_label">Users</string>
    <string name="add_label">Add</string>

    <string name="add_to_my_contacts_button_text">Add to my contacts</string>
    <string name="search_view_search_icon_description">seach_icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>