<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <View
        android:id="@+id/detailBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle"
        android:transitionName="detailBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/top_rectangle_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/top_rectangle_vertical" />

    <ImageView
        android:id="@+id/toolbar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button_desc"
        android:src="@drawable/arrow_back_24px"
        app:layout_constraintBottom_toBottomOf="@id/tvProfileText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/contacts_tool_bar_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvProfileText" />

    <TextView
        android:id="@+id/tvProfileText"
        style="@style/h2_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_textview_text"
        android:textColor="@color/default_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/profile_textview_vertical" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/profile_image_desc"
        android:src="@drawable/empty_photo_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/photo_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/photo_vertical"
        app:layout_constraintWidth_percent="@dimen/photo_width" />

    <TextView
        android:id="@+id/tvName"
        style="@style/h2_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_hint"
        android:textColor="@color/default_text_color"
        app:layout_constraintBottom_toBottomOf="@id/detailBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintVertical_bias="@dimen/name_vertical" />

    <TextView
        android:id="@+id/tvCareer"
        style="@style/h3_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/career"
        android:textColor="@color/additional_first"
        app:layout_constraintBottom_toBottomOf="@id/detailBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintVertical_bias="@dimen/career_vertical" />

    <TextView
        android:id="@+id/tvAddress"
        style="@style/h3_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:textColor="@color/additional_first"
        app:layout_constraintBottom_toBottomOf="@id/detailBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintVertical_bias="@dimen/address_vertical" />

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/facebook_logo_desc"
        android:src="@drawable/facebook_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/networks_logo_height"
        app:layout_constraintHorizontal_bias="@dimen/facebook_logo_hor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailBackground"
        app:layout_constraintVertical_bias="@dimen/networks_logo_ver"
        app:layout_constraintWidth_percent="@dimen/networks_logo_width" />

    <ImageView
        android:id="@+id/linkedin_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/linkedin_logo_desc"
        android:src="@drawable/linkedin_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/networks_logo_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailBackground"
        app:layout_constraintVertical_bias="@dimen/networks_logo_ver"
        app:layout_constraintWidth_percent="@dimen/networks_logo_width" />

    <ImageView
        android:id="@+id/instagram_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/instagram_logo_desc"
        android:src="@drawable/instagram_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/networks_logo_height"
        app:layout_constraintHorizontal_bias="@dimen/instagram_logo_hor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailBackground"
        app:layout_constraintVertical_bias="@dimen/networks_logo_ver"
        app:layout_constraintWidth_percent="@dimen/networks_logo_width" />

    <Button
        android:id="@+id/contacts_button"
        style="@style/h2_5_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/view_contacts_button"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:text="@string/message_button_text"
        android:textColor="@color/default_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/contacts_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailBackground"
        app:layout_constraintVertical_bias="@dimen/contacts_vertical"
        app:layout_constraintWidth_percent="@dimen/bottom_buttons_width" />

</androidx.constraintlayout.widget.ConstraintLayout>
